# clibs

./: README.md
ArrayList/: arrayList.c  arrayList.h
LinkedList/: linkedList.c  linkedList.h
LinkedList/tests/: .gitignore  CMakeLists.txt  Makefile  adders.tests.c  adders.tests.h  constructors.tests.c  constructors.tests.h  exec  indexers.tests.c  indexers.tests.h  main.c  removers.tests.c  settersNgetters.tests.c  utils.tests.c
Queue/: queue.c  queue.h
Queue/tests/: Makefile  constructor.tests.c  constructor.tests.h  main.c  queuebasics.tests.c  queuebasics.tests.h
arraylist/: arrayList.c
linked_list/: Makefile  linkedList.c  main.c
linked_list/tests/: Makefile  adders.tests.c  adders.tests.h  constructors.tests.c  constructors.tests.h  indexers.tests.c  main.c  removers.tests.h  settersNgetters.tests.h  utils.tests.c  utils.tests.h
queue/: queue.h
